<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:columnCount="5">


    <EditText
        android:id="@+id/showInfo"
        android:layout_width="wrap_content"
        android:layout_columnSpan="5"
        android:layout_margin="5dp"
        android:enabled="false"
        android:gravity="right"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        android:text="@string/zero"
        android:textColor="#770000ff"
        android:background="@drawable/border"
        android:layout_gravity="fill_horizontal"
        />
    <Button
        style="@style/mystyle"
        android:text="@string/mc"
        />
    <Button
        style="@style/mystyle"
        android:text="@string/mr"/>
    <Button
        style="@style/mystyle"
        android:text="@string/ms"/>
    <Button
        style="@style/mystyle"
        android:text="@string/mplus"/>
    <Button
        style="@style/mystyle"
        android:text="@string/mmins"/>
    <Button
        android:id="@+id/backspace"
        style="@style/mystyle"
        android:text="@string/arrow"/>
    <Button
        style="@style/mystyle"
        android:text="@string/ce"/>
    <Button
        android:id="@+id/clear"
        style="@style/mystyle"
        android:text="@string/c"/>
    <Button
        style="@style/mystyle"
        android:text="@string/plusminus"/>
    <Button
        style="@style/mystyle"
        android:text="@string/correct"/>
    <Button
        android:id="@+id/seven"
        style="@style/mystyle"
        android:text="@string/seven"/>
    <Button
        android:id="@+id/eight"
        style="@style/mystyle"
        android:text="@string/eight"/>
    <Button
        android:id="@+id/nine"
        style="@style/mystyle"
        android:text="@string/nine"/>
    <Button
        android:id="@+id/div"
        style="@style/mystyle"
        android:text="@string/div"/>
    <Button
        android:id="@+id/mode"
        style="@style/mystyle"
        android:text="@string/mode"/>
    <Button
        android:id="@+id/four"
        style="@style/mystyle"
       android:text="@string/four"/>
    <Button
        android:id="@+id/five"
        style="@style/mystyle"
        android:text="@string/five"/>

    <Button
        android:id="@+id/six"
        style="@style/mystyle"
        android:text="@string/six"/>
    <Button
        android:id="@+id/mul"
        style="@style/mystyle"
        android:text="@string/mul"/>
    <Button
        style="@style/mystyle"
        android:text="@string/daoshu"/>
    <Button
        android:id="@+id/one"
        style="@style/mystyle"
        android:text="@string/one"/>
    <Button
        android:id="@+id/two"

        style="@style/mystyle"
        android:text="@string/two"/>
    <Button
        android:id="@+id/three"
        style="@style/mystyle"
        android:text="@string/three"/>
    <Button
        android:id="@+id/mins"
        style="@style/mystyle"
        android:text="@string/mins"/>
    <Button
        android:id="@+id/equal"
        style="@style/mystyle"
        android:text="@string/equal"
        android:layout_rowSpan="2"
        android:layout_gravity="fill_vertical"/>

    <Button
        android:id="@+id/zero"
        style="@style/mystyle"
        android:text="@string/zero"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"/>
    <Button
        android:id="@+id/dot"
        style="@style/mystyle"
        android:text="@string/dot"/>
    <Button
        android:id="@+id/plus"
        style="@style/mystyle"
        android:text="@string/plus"/>
</GridLayout>