<TableLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#FFFFF0"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
       android:enabled="false"
       android:layout_gravity="right"
       android:inputType="numberDecimal"
       android:textSize="24sp"
       android:textColor="#770000ff"
       android:background="@drawable/border"
       android:text="@string/zero"  />

    <TableRow           android:layout_gravity="center_horizontal">

    <Button
        style="@style/mystyle"
         android:text="@string/mc"/>

    <Button
        style="@style/mystyle"
        android:text="@string/mr"/>

    <Button
        style="@style/mystyle"
        android:text="@string/ms"/>
    <Button
        style="@style/mystyle"
        android:text="@string/mplus"/>
    <Button
        style="@style/mystyle"
        android:text="@string/mins"/>
    </TableRow>


    <TableRow       android:layout_gravity="center_horizontal">
        <Button
            style="@style/mystyle"
            android:text="@string/arrow"/>
        <Button
            style="@style/mystyle"
            android:text="@string/ce"/>
        <Button
            style="@style/mystyle"
            android:text="@string/c"/>
        <Button
            style="@style/mystyle"
            android:text="@string/plusminus"/>

        <Button
            style="@style/mystyle"
            android:text="@string/correct"/>
    </TableRow>


    <TableRow   android:layout_gravity="center_horizontal">
        <Button
            style="@style/mystyle"
            android:text="@string/seven"/>
        <Button
            style="@style/mystyle"
            android:text="@string/eight"/>
        <Button
            style="@style/mystyle"
            android:text="@string/nine"/>
        <Button
            style="@style/mystyle"
            android:text="@string/div"/>
        <Button
            style="@style/mystyle"
            android:text="@string/mode"/>
    </TableRow>

    <TableRow  android:layout_gravity="center_horizontal">
        <Button
            style="@style/mystyle"
            android:text="@string/four"/>
        <Button
            style="@style/mystyle"
            android:text="@string/five"/>

        <Button
            style="@style/mystyle"
            android:text="@string/six"/>
        <Button
        style="@style/mystyle"
        android:text="@string/mul"/>
        <Button
            style="@style/mystyle"
            android:text="@string/daoshu"/>
    </TableRow>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/one"
            style="@style/mystyle"
            android:layout_margin="2dp"
            android:text="@string/one"  />
          <Button
              android:id="@+id/two"
              style="@style/mystyle"
              android:layout_alignTop="@id/one"
              android:layout_toRightOf="@id/one"
              android:text="@string/two"/>
        <Button
            android:id="@+id/three"
            style="@style/mystyle"
            android:layout_alignTop="@id/one"
            android:layout_toRightOf="@id/two"
            android:text="@string/three"/>

        <Button
            android:id="@+id/mins"
            style="@style/mystyle"
            android:layout_alignTop="@id/one"
            android:layout_toRightOf="@id/three"
            android:text="@string/mins"/>
        <Button
            android:id="@+id/equal"
            style="@style/mystyle"
            android:layout_height="100dp"
            android:layout_alignTop="@id/one"
            android:layout_toRightOf="@id/mins"
            android:text="@string/equal"
             />
        <Button
            android:id="@+id/plus"
            style="@style/mystyle"
            android:text="@string/plus"
            android:layout_below="@+id/three"
            android:layout_toEndOf="@+id/three" />
        <Button
            android:id="@+id/dot"
            style="@style/mystyle"
            android:text="@string/dot"
            android:layout_below="@+id/three"
            android:layout_alignStart="@+id/three" />
        <Button

            style="@style/mystyle"
            android:layout_width="120dp"
            android:text="@string/zero"
            android:layout_below="@+id/one"
            android:layout_alignParentStart="true" />


    </RelativeLayout>

</TableLayout>


